--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <include
-        android:id="@+id/toolbar_home"
-        layout="@layout/toolbar_home" />
-
-    <ImageView
-        android:id="@+id/slider"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@id/toolbar_home"
-        android:src="@drawable/iphnx" />
-
-    <include
-        android:id="@+id/categories"
-        layout="@layout/layout_category" />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/categories">
+        android:orientation="vertical"
+        tools:context=".activity.MainActivity">
+
+        <include
+            android:id="@+id/toolbar_home"
+            layout="@layout/toolbar_home" />
+
+        <ImageView
+            android:id="@+id/slider"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@drawable/iphnx" />
+
+        <include
+            android:id="@+id/categories"
+            layout="@layout/layout_category" />
 
         <TextView
             android:id="@+id/textViewProducts"
@@ -41,19 +40,7 @@
             android:id="@+id/recyclerViewProducts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewProducts"
-            android:visibility="invisible" />
+            android:layout_marginTop="20dp" />
 
-        <TextView
-            android:id="@+id/textViewNotingFound"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:text="No Product Found!"
-            android:textColor="#000"
-            android:textSize="20sp" />
-    </RelativeLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
