--- a/app/src/main/res/layout/layout_product_single.xml
+++ b/app/src/main/res/layout/layout_product_single.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/imageViewProduct"
             android:layout_width="66dp"
             android:layout_height="133dp"
             android:layout_gravity="center"
