--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -25,12 +25,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/slider"
+            <ss.com.bannerslider.Slider
+                android:id="@+id/product_slider"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:background="#fff"
-                android:src="@drawable/iphnx" />
+                app:slider_interval="5000"
+                app:slider_loopSlides="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,10 +59,10 @@
                         android:id="@+id/textViewPrice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="5"
+                        android:layout_weight="4"
                         android:text="750 $"
                         android:textColor="#000"
-                        android:textSize="21sp" />
+                        android:textSize="17sp" />
                 </LinearLayout>
 
                 <LinearLayout
