--- a/app/src/main/res/layout/layout_category.xml
+++ b/app/src/main/res/layout/layout_category.xml
@@ -56,6 +56,7 @@
                 app:civ_border_width="1dp" />
 
             <TextView
+                android:id="@+id/textViewCategoryOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -65,6 +66,12 @@
                 android:text="Category"
                 android:textColor="#000"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textViewCategoryOneHidden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -85,6 +92,7 @@
                 app:civ_border_width="1dp" />
 
             <TextView
+                android:id="@+id/textViewCategoryTwo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -94,6 +102,12 @@
                 android:text="Category"
                 android:textColor="#000"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textViewCategoryTwoHidden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -113,6 +127,7 @@
                 app:civ_border_width="1dp" />
 
             <TextView
+                android:id="@+id/textViewCategoryThree"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -122,6 +137,12 @@
                 android:text="Category"
                 android:textColor="#000"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textViewCategoryThreeHidden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -141,6 +162,7 @@
                 app:civ_border_width="1dp" />
 
             <TextView
+                android:id="@+id/textViewCategoryFour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -150,6 +172,12 @@
                 android:text="Category"
                 android:textColor="#000"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textViewCategoryFourHidden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
         </LinearLayout>
 
