--- a/app/src/main/res/layout/layout_category.xml
+++ b/app/src/main/res/layout/layout_category.xml
@@ -23,6 +23,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/textViewShowAllCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
