Show cart items and checkout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:id="@+id/slider"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:src="@drawable/iphnx" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/ecommerce" />
 
         <include
             android:id="@+id/categories"
