--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -25,4 +25,28 @@
         android:text="Ecommerce"
         android:textColor="#000" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end">
+
+        <TextView
+            android:id="@+id/textViewTotalCart"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:text="0"
+            android:textColor="#000" />
+
+        <ImageView
+            android:id="@+id/imageViewCart"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/cart" />
+
+    </RelativeLayout>
+
 </android.support.v7.widget.Toolbar>
