--- a/app/src/main/res/layout/layout_category.xml
+++ b/app/src/main/res/layout/layout_category.xml
@@ -52,7 +52,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/sports"
+                android:src="@drawable/category"
                 app:civ_border_color="@color/circular_pic_border"
                 app:civ_border_width="1dp" />
 
@@ -88,7 +88,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/sports"
+                android:src="@drawable/category"
                 app:civ_border_color="@color/circular_pic_border"
                 app:civ_border_width="1dp" />
 
@@ -123,7 +123,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/sports"
+                android:src="@drawable/category"
                 app:civ_border_color="@color/circular_pic_border"
                 app:civ_border_width="1dp" />
 
@@ -158,7 +158,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/sports"
+                android:src="@drawable/category"
                 app:civ_border_color="@color/circular_pic_border"
                 app:civ_border_width="1dp" />
 
